welcome.lessons.welcome.bat.bool2.TwoAsOne.scala.error
twoAsOne:2: error: value |- is not a member of Boolean
  if (a+b==c || a+c==b |- c+b==a) {
                       ^